[gd_scene load_steps=2 format=2]

[ext_resource path="res://Spatial.gd" type="Script" id=1]

[node name="Spatial" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="TimerStart" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="TimerStop" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]

[connection signal="timeout" from="TimerStop" to="." method="_on_TimerStop_timeout"]


